<resources>
    <string name="app_name">Diffirent_text</string>
    <string name="sample">Sample</string>
    <string name="name">Name</string>
    <string name="student_form">Student Form</string>
    <string name="password">Password</string>
    <string name="age">age</string>
    <string name="student_email">Student Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="describe_yourself">Describe Yourself</string>
    <string name="in_time">In-Time</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
</resources>